# som-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LoadClass.som  README.md  crates.js  help.html  rebench.conf  run_benchmarks.sh  run_tests.sh  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: tests.yaml
scripts/: command_git_backtracker.sh  run_benchmarks.sh  run_same_bench.sh  run_tests.sh  verify_gc.sh
search.desc/som_core/: som_core-desc-0-.js
search.desc/som_gc/: som_gc-desc-0-.js
search.desc/som_interpreter_ast/: som_interpreter_ast-desc-0-.js
search.desc/som_interpreter_bc/: som_interpreter_bc-desc-0-.js
search.desc/som_lexer/: som_lexer-desc-0-.js
search.desc/som_parser_core/: som_parser_core-desc-0-.js
search.desc/som_parser_symbols/: som_parser_symbols-desc-0-.js
search.desc/som_value/: som_value-desc-0-.js
som-core/: Cargo.toml
som-core/src/: ast.rs  bytecode.rs  cli_parser.rs  convert.rs  core_classes.rs  gc.rs  interner.rs  lib.rs  universe.rs  value.rs  value_ptr.rs
som-gc/: Cargo.toml  README.md
som-gc/src/: active_plan.rs  api.rs  collection.rs  entry_point.rs  gc_interface.rs  gcref.rs  gcslice.rs  lib.rs  mmtk_test.rs  object_model.rs  reference_glue.rs  scanning.rs  slot.rs  util.rs  vm_util_idk.rs
som-interpreter-ast/: Cargo.toml
som-interpreter-ast/src/: ast.rs  block.rs  class.rs  compiler.rs  convert.rs  evaluate.rs  frame.rs  gc.rs  hashcode.rs  inliner.rs  instance.rs  invokable.rs  lib.rs  main.rs  method.rs  shell.rs  universe.rs  value.rs  value_ptr.rs
som-interpreter-ast/src/compiler/: compile.rs  inliner.rs  mod.rs
som-interpreter-ast/src/nodes/: down_to_do_node.rs  global_read.rs  mod.rs  to_by_do_node.rs  trivial_methods.rs
som-interpreter-ast/src/nodes/inlined/: and_inlined_node.rs  if_nil_if_not_nil_inlined_node.rs  if_nil_inlined_node.rs  if_true_if_false_inlined_node.rs  mod.rs
som-interpreter-ast/src/primitives/: array.rs  blocks.rs  class.rs  double.rs  false.rs  integer.rs  method.rs  mod.rs  object.rs  string.rs  symbol.rs  system.rs  true.rs
som-interpreter-ast/src/specialized/: down_to_do_node.rs  if_node.rs  if_true_if_false_node.rs  mod.rs  to_by_do_node.rs  to_do_node.rs  trivial_methods.rs  while_node.rs
som-interpreter-ast/src/specialized/inlined/: and_inlined_node.rs  if_inlined_node.rs  if_true_if_false_inlined_node.rs  mod.rs  or_inlined_node.rs  to_do_inlined_node.rs  while_inlined_node.rs
som-interpreter-ast/src/specialized/trivial/: literal_return.rs  mod.rs
som-interpreter-ast/src/value/: convert.rs  mod.rs  nan_boxed_val.rs  value_ptr.rs
som-interpreter-ast/src/vm_objects/: block.rs  class.rs  frame.rs  instance.rs  method.rs  mod.rs
som-interpreter-ast/tests/: basic_interpreter_tests.rs  inlining_tests.rs
som-interpreter-bc/: Cargo.toml
som-interpreter-bc/src/: block.rs  class.rs  compiler.rs  convert.rs  disassembler.rs  frame.rs  gc.rs  hashcode.rs  inliner.rs  instance.rs  interner.rs  interpreter.rs  lib.rs  main.rs  method.rs  shell.rs  universe.rs  value.rs
som-interpreter-bc/src/compiler/: compile.rs  inliner.rs  mod.rs
som-interpreter-bc/src/debug/: disassembler.rs  mod.rs  profiler.rs
som-interpreter-bc/src/gc/: active_plan.rs  api.rs  collection.rs  gc_interface.rs  mod.rs  object_model.rs  reference_glue.rs  scanning.rs
som-interpreter-bc/src/primitives/: array.rs  blocks.rs  class.rs  double.rs  false.rs  integer.rs  method.rs  mod.rs  object.rs  string.rs  symbol.rs  system.rs  true.rs
som-interpreter-bc/src/value/: convert.rs  mod.rs  nanboxed.rs  value_enum.rs  value_ptr.rs
som-interpreter-bc/src/vm_objects/: block.rs  class.rs  frame.rs  instance.rs  method.rs  mod.rs  trivial_methods.rs
som-interpreter-bc/src/vm_objects/tests/: frame.rs
som-interpreter-bc/tests/: basic_interpreter_tests.rs  frame_tests.rs  inlining_tests.rs  specialized_bc.rs
som-lexer/: Cargo.toml
som-lexer/src/: lexer.rs
som-lexer/tests/: tests.rs
som-parser-core/: Cargo.toml
som-parser-core/src/: combinators.rs  lib.rs
som-parser-symbols/: Cargo.toml
som-parser-symbols/src/: lang.rs  lib.rs
som-parser-symbols/tests/: tests.rs
som-parser-text/: Cargo.toml
som-parser-text/src/: lang.rs
som-value/: Cargo.toml
som-value/src/: convert.rs  interned.rs  lib.rs  value.rs  value_ptr.rs
som_core/: all.html  index.html  sidebar-items.js
som_core/ast/: enum.Expression.html  enum.Literal.html  enum.MethodBody.html  enum.MethodKind.html  index.html  sidebar-items.js  (+8 more)
som_gc/: all.html  index.html  macro.debug_assert_valid_semispace_ptr!.html  macro.debug_assert_valid_semispace_ptr.html  macro.debug_assert_valid_semispace_ptr_value!.html  macro.debug_assert_valid_semispace_ptr_value.html  sidebar-items.js  static.MMTK_SINGLETON.html  static.MMTK_TO_VM_INTERFACE.html  struct.SOMVM.html
som_interpreter_ast/: all.html  index.html  macro.expect_args.html  macro.get_args_from_stack!.html  macro.get_args_from_stack.html  sidebar-items.js  static.STACK_ARGS_RAW_PTR_CONST.html  static.UNIVERSE_RAW_PTR_CONST.html  type.SOMRef.html  type.SOMWeakRef.html
som_interpreter_bc/: all.html  index.html  macro.cur_frame!.html  macro.cur_frame.html  macro.expect_args.html  macro.pop_args_from_stack!.html  macro.pop_args_from_stack.html  macro.reverse.html  sidebar-items.js  static.INTERPRETER_RAW_PTR_CONST.html  static.UNIVERSE_RAW_PTR_CONST.html  type.SOMRef.html  type.SOMWeakRef.html
som_lexer/: all.html  enum.Token.html  index.html  struct.Lexer.html
som_parser_core/: all.html  index.html  struct.And.html  struct.AndLeft.html  struct.AndRight.html  struct.Map.html  struct.Or.html  trait.Parser.html
som_parser_symbols/: all.html  enum.AstGenCtxtType.html  enum.AstMethodGenCtxtType.html  fn.apply.html  fn.parse_file.html  fn.parse_file_no_universe.html  index.html  sidebar-items.js  struct.AstGenCtxtData.html  type.AstGenCtxt.html
som_parser_text/: all.html  fn.apply.html  fn.parse_file.html  index.html
som_value/: all.html  index.html  macro.delegate_to_base_value!.html  macro.delegate_to_base_value.html  sidebar-items.js
(+749 files in other folders)
