[package]
name = "som-core"
version = "0.1.0"
description = "Common types about the Simple Object Machine"
authors = ["Nicolas Polomack <nmp21@kent.ac.uk>"]
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
som-gc = { path = "../som-gc" }
num-bigint = "0.4.6"

static_assertions = "1.1.0"

[features]
block-debug-info = []