[package]
name = "som-core"
version = "0.1.0"
description = "Common types about the Simple Object Machine"
authors = ["Nicolas Polomack <nmp21@kent.ac.uk>"]
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
static_assertions = "1.1.0"

# not that hard a dependency, just used for type hinting in generic code in `value.rs`. If need be, can be removed
num-bigint = "0.4.6"

anyhow = "1.0.51"

[features]
block-debug-info = []
