[package]
name = "som-gc"
version = "0.1.0"
authors = ["Octave Larose <o.larose@kent.ac.uk>"]
edition = "2021"

#[lib]
#name = "som_gc_lib"
#crate-type = ["cdylib"]

[dependencies]
mmtk = "0.27.0"
libc = "0.2"
atomic = "0.6"
log = "0.4.21"

[features]
#default = ["mmtk/extreme_assertions"]
is_mmtk_object = ["mmtk/is_mmtk_object"]
malloc_counted_size = ["mmtk/malloc_counted_size"]
