[package]
name = "som-gc"
version = "0.1.0"
authors = ["Octave Larose <o.larose@kent.ac.uk>"]
edition = "2021"

#[lib]
#name = "som_gc_lib"
#crate-type = ["cdylib"]

[dependencies]
som-core = { path = "../som-core" }
som-value = { path = "../som-value", version = "0.0.3" }
#mmtk = { path = "../mmtk-core", version = "0.29.0" }
mmtk = "0.30.0"

libc = "0.2"
#atomic = "0.6"
log = "0.4.21"

num-bigint = "0.4.6"

[features]
default = ["semispace"]
# default = ["marksweep"]

#default = ["mmtk/extreme_assertions"]

marksweep = []
semispace = []

stress_test = []
is_mmtk_object = ["mmtk/is_mmtk_object"]
malloc_counted_size = ["mmtk/malloc_counted_size"]
