[package]
name = "som-interpreter-ast"
version = "0.1.0"
description = "An interpreter for the Simple Object Machine"
authors = ["Nicolas Polomack <nmp21@kent.ac.uk>"]
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
# internal
som-core = { path = "../som-core", version = "0.1.0" }
som-value = { path = "../som-value" }
som-lexer = { path = "../som-lexer", version = "0.1.0" }
som-parser = { package = "som-parser-symbols", path = "../som-parser-symbols", version = "0.1.0" }
som-gc = { path = "../som-gc", version = "0.1.0" }

# error handling
anyhow = "1.0.51"

# consistently-ordered hashmaps
indexmap = "2.6.0"

# big integers
num-bigint = "0.4.6"
num-traits = "0.2.14"

# random numbers
rand = "0.9.0"

# global allocator
jemallocator = { version = "0.5.0", optional = true }
indenter = { version = "0.3.3", features = ["std"] }
once_cell = "1.19.0"

mmtk = "0.30.0"
#mmtk = { path = "../mmtk-core", version = "0.29.0" }

log = "0.4.21"

[dev-dependencies]
rstest = "0.24.0"

[features]
inlining-disabled = []
jemalloc = ["jemallocator"]
debug-info = []
